<resources>
    <string name="app_name">ONN</string>
    <string name="btnYes">Yes</string>
    <string name="btnNo">No</string>
    <string name="location_service_disabled">ONN wants to access your location. Please enable location setting.</string>
    <string name="login_to_your_account1">Login To</string>
    <string name="login_to_your_account2">Your Account</string>
    <string name="require_information">Require information to login account</string>
    <string name="enter_mobile_no">Enter Mobile No</string>
    <string name="login_with_otp">Login with OTP</string>
    <string name="we_will_send_you_otp">We will send you one time password (OTP)</string>
    <string name="otp">Otp</string>
    <string name="verification">Verification</string>
    <string name="verify_and_login">Verify and Login</string>
    <string name="please_enter_otp">Please enter the OTP sent to your mobile numer</string>
    <string name="didnot_receive_an_otp">Didn’t receive an OTP?</string>
    <string name="resend_otp"><u>Resend OTP</u></string>
    <string name="appointed_to">Appointed To</string>
    <string name="select_your_location">Select Your Location</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="start_your_day">Start Your Day</string>
    <string name="order_on_call">Order On Call</string>
    <string name="store_visit">Store Visit</string>
    <string name="distributor_visit">Distributor Visit</string>
    <string name="activity_logs">Activity Logs</string>
    <string name="my_profile">My Profile</string>
    <string name="store_list">Store List</string>
    <string name="store_details">Store Details</string>
    <string name="sales_history">Sales History</string>
    <string name="last_3_months">Last 3 Months</string>
    <string name="last_order_value">Last Order Value</string>
    <string name="avg_order_value">Avg. Order Value</string>
    <string name="last_visit">Last Visit</string>
    <string name="product_wise_sale">Product Wise Sale</string>
    <string name="total_order_history">Total Order History</string>
    <string name="last_10_visit">Last 10 VIsit</string>
    <string name="place_order">Place Order</string>
    <string name="no_order">No Order</string>
    <string name="product_list">Product List</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="select_color">Select Color</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="review_order">Review Order</string>
    <string name="comment_to_distributord">Comment for distriutors</string>
    <string name="place_order_now">Place Order Now</string>
    <string name="basic_information">Basic Information</string>
    <string name="contact_information">Contact Information</string>
    <string name="submit_details">Submit Details</string>
    <string name="add_store">Add Store</string>
    <string name="store_information">Store Information</string>
    <string name="location_information">Location Information</string>
    <string name="other_information">Other Information</string>
    <string name="add_new_store">Add New Store</string>
    <string name="search_store">Search Store</string>
    <string name="search_here">Search Here</string>
    <string name="go_to_dashboard">Go To Dashboard</string>
    <string name="logout">Logout</string>
    <string name="order_details">Order Details</string>
    <string name="distributor_list">Distributor List</string>
    <string name="add_distributor">Add Distributor</string>
    <string name="distributor_information">Distributor Information</string>
    <string name="add_new_distributor">Add New Distributor</string>
    <string name="product_catalogue">Product Catalogue</string>
    <string name="onn_schemes">ONN Schemes</string>
    <string name="schemes">Schemes</string>
    <string name="product_search">Product Search</string>
    <string name="vp_dashboard">VP Dashboard</string>
    <string name="state_wise_report">State Wise Report</string>
    <string name="area_sales_manager">Area Sales Manager</string>
    <string name="area_sales_executive">Area Sales Executive</string>
    <string name="sales_person_wise">Sales Person Wise Report</string>
    <string name="distributor_wise">Distributor Wise Report</string>
    <string name="retailer_list">Retailer List</string>
    <string name="retailer_wise_orders">Retailer Wise Orders</string>
    <string name="order_history">Order History</string>
    <string name="enter_password">Enter Password</string>
    <string name="login">Login</string>
    <string name="view"><![CDATA[<u>View</u>]]></string>
    <string name="add_mom">Add MOM</string>
    <string name="my_orders">My Orders</string>
    <string name="dashboard">Dashboard</string>
    <string name="sales_report">Sales Report</string>
    <string name="enter_reason">Enter Reason</string>
    <string name="continue_shopping">Continue Shopping</string>
    <string name="select_distributor">Select Distributor</string>
    <string name="store_wise_report">Store Wise Report</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="select_range">Select Range</string>
    <string name="product_style_no">Product Style No</string>
    <string name="product_wise_report">Product Wise Report</string>
    <string name="team_wise_report">Team Wise Report</string>
    <string name="select_region">Select Region</string>
    <string name="select_state">Select State</string>
    <string name="end_visit">End Visit</string>

    <string name="your_location_is_tracked">Your location is being tracked</string>
</resources>
