<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EnterMobileActivity"
    android:background="@color/bg_color"
    android:orientation="vertical">
    <ImageView
        android:layout_width="@dimen/dp_100"
        android:layout_height="@dimen/dp_100"
        android:src="@drawable/login_icon"
        android:layout_marginLeft="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_30"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_to_your_account1"
        android:textSize="@dimen/sp_24"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/dp_40"
        android:layout_marginLeft="@dimen/dp_30"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_to_your_account2"
        android:textSize="@dimen/sp_24"
        android:textColor="@color/black"
        android:layout_marginLeft="@dimen/dp_30"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/require_information"
        android:textColor="@color/lbl_color1"
        android:layout_marginTop="@dimen/dp_30"
        android:layout_marginLeft="@dimen/dp_30"
        android:textSize="@dimen/sp_16"/>

    <EditText
        android:id="@+id/etMobile"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:layout_marginLeft="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_30"
        android:layout_marginRight="@dimen/dp_30"
        android:drawableLeft="@drawable/mobile"
        android:drawablePadding="@dimen/dp_20"
        android:hint="@string/enter_mobile_no"
        android:inputType="number"
        android:maxLength="10"
        android:textColor="@color/black"
        android:textColorHint="@color/lbl_color1"
        android:background="@drawable/rounded_corner_edit_txt"
        android:paddingLeft="@dimen/dp_10" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:layout_below="@+id/etMobile"
        android:layout_marginLeft="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_30"
        android:background="@drawable/rounded_corner_btn"
        android:text="@string/login_with_otp"
        android:gravity="center"
        android:drawableRight="@drawable/button_arrow"
        android:paddingRight="@dimen/dp_10"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_16" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/we_will_send_you_otp"
        android:textColor="@color/lbl_color1"
        android:layout_marginTop="@dimen/dp_30"
        android:layout_marginLeft="@dimen/dp_80"
        android:layout_marginRight="@dimen/dp_80"
        android:gravity="center"
        android:textSize="@dimen/sp_16"/>
</LinearLayout>