<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EnterMobileActivity"
    android:background="@color/bg_color"
    android:orientation="vertical">
    <ImageView
        android:layout_width="@dimen/dp_100"
        android:layout_height="@dimen/dp_100"
        android:src="@drawable/otp_icon"
        android:layout_marginLeft="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_30"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/otp"
        android:textSize="@dimen/sp_24"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/dp_40"
        android:layout_marginLeft="@dimen/dp_30"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verification"
        android:textSize="@dimen/sp_24"
        android:textColor="@color/black"
        android:layout_marginLeft="@dimen/dp_30"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/please_enter_otp"
        android:textColor="@color/lbl_color1"
        android:layout_marginTop="@dimen/dp_30"
        android:layout_marginLeft="@dimen/dp_30"
        android:layout_marginRight="@dimen/dp_120"
        android:textSize="@dimen/sp_16"/>

    <LinearLayout
        android:id="@+id/li_otp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_40"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_10"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_50"
            android:orientation="vertical"
            android:layout_marginLeft="@dimen/dp_25"

            android:layout_weight="1">
            <EditText
                android:id="@+id/etNum1"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50"
                android:textColorHint="@color/black"
                android:singleLine="false"
                android:textSize="@dimen/dp_16"
                android:inputType="number"
                android:maxLength="1"
                android:gravity="center"
                android:background="@drawable/rounded_corner_edit_txt"
                android:textColor="@color/black"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_50"
            android:orientation="vertical"
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_weight="1">
            <EditText
                android:id="@+id/etNum2"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50"
                android:textColorHint="@color/black"
                android:singleLine="false"
                android:textSize="@dimen/dp_16"
                android:inputType="number"
                android:maxLength="1"
                android:gravity="center"
                android:background="@drawable/rounded_corner_edit_txt"
                android:textColor="@color/black"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_50"
            android:orientation="vertical"
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_weight="1">
            <EditText
                android:id="@+id/etNum3"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50"
                android:textColorHint="@color/black"
                android:singleLine="false"
                android:textSize="@dimen/dp_16"
                android:inputType="number"
                android:maxLength="1"
                android:gravity="center"
                android:background="@drawable/rounded_corner_edit_txt"
                android:textColor="@color/black"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_50"
            android:orientation="vertical"
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_marginRight="@dimen/dp_25"
            android:layout_weight="1">
            <EditText
                android:id="@+id/etNum4"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50"
                android:textColorHint="@color/black"
                android:singleLine="false"
                android:textSize="@dimen/dp_16"
                android:inputType="number"
                android:maxLength="1"
                android:gravity="center"
                android:background="@drawable/rounded_corner_edit_txt"
                android:textColor="@color/black"/>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btnVerify"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:layout_below="@+id/etMobile"
        android:layout_marginLeft="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_30"
        android:background="@drawable/rounded_corner_btn"
        android:text="@string/verify_and_login"
        android:gravity="center"
        android:drawableRight="@drawable/button_arrow"
        android:paddingRight="@dimen/dp_10"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_16" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/didnot_receive_an_otp"
        android:textColor="@color/lbl_color1"
        android:layout_marginTop="@dimen/dp_30"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="@dimen/sp_16"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resend_otp"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="@dimen/sp_16"/>
</LinearLayout>